Fix some scrollbars

--- a/src/wirecloud/defaulttheme/static/css/workspace/widget.scss
+++ b/src/wirecloud/defaulttheme/static/css/workspace/widget.scss
@@ -13,6 +13,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    margin: 0px;
 
     &.dragging {
         transition: opacity 0.35s ease-in;
